# axum-todo-app

./: .gitignore  Cargo.toml  README.md  database.db
migrations/: 20240624080053_create_items_table.sql
src/: db.rs  lib.rs  main.rs
src/modules/todos/: mod.rs  todo_controller.rs  todo_dto.rs  todo_entity.rs  todo_service.rs
